<?xml version="1.0" encoding="utf-8"?>
<resources>
<string name="agree">Agree</string>
<string name="disagree">Disagree</string>
<string name="agreement_top">Agreement:</string>
<string name="agreement">For users:\n • I agree that the application performs the function of a conventional internet browser\n • I agree to use the free app only 7 days from the date of the first run. Or 37 days, if I agree to leave a review in the online store Google Play\n • After the trial period, I get the opportunity to buy the application\n • I agree that the content provided by third party Internet sites, and nothing against the content does not have the\n\nFor right holders:\n • I agree that the application performs the function of a conventional internet browser\n • If the information belongs to me, and I do not want her to be freely disseminated, I personally undertake to try to remove this information from sites that can open this Internet browser\n • If I am unable to delete the information from the site, I agree to contact the developer of the application to negotiate the removal of the possibility to read information that belongs to me, the right holder\n\nContact:\n • Roman Gaitbaev\n • romzesrover @ gmail. com\n • vk.com / romzesrover</string>
<string name="trial_title">Your trial period has ended for this application</string>
<string name="trial_byu_google">Buy this app</string>
<string name="trial_byu_google_desc">You\'ll get infinite time to use</string>

<string name="trial_get_thr">Rate this app</string>
<string name="trial_get_thr_desc">You\'ll get 30 days to use</string>

<string name="trial_price_paid">$0.99</string>
<string name="trial_price_free">free</string>

<string name="trial_until">Trial until</string>
<string name="trial_buyed">Infinite time to use</string>

<string-array name="moths_of_year">
         <item >January</item>
		<item >February</item>
		<item >March</item>
		<item >April</item>
		<item >May</item>
		<item >June</item>
		<item >July</item>
		<item >August</item>
		<item >September</item>
		<item >October</item>
		<item >November</item>
		<item >December</item>
</string-array>
     
    <string-array name="rate_me">
         <item >Rate me !</item>
         <item >If you like my app, please give your feedback :)</item>
         <item >Rate, and remove this message!</item>
         <item >Later.</item>
         <item >Please give me 5 star :) you can also add description</item>
     </string-array>
    
    <string name="action_settings">Settings</string>
		
    <!-- Text below disallow to translate! -->
    <string name="ru_to_replace_one">ДО</string>
    <string name="ru_to_replace_two">Ваш день рождения:</string>
    <string-array name="ru_to_replace_three">
         <item >Января</item>
		<item >Февраля</item>
		<item >Марта</item>
		<item >Апреля</item>
		<item >Мая</item>
		<item >Июня</item>
		<item >Июля</item>
		<item >Августа</item>
		<item >Сентября</item>
		<item >Октября</item>
		<item >Ноября</item>
		<item >Декабря</item>
</string-array>
     <string-array name="zodiac_signs_ru">
        <item >Овен</item>
        <item >Телец</item>
        <item >Близнецы</item>
        <item >Рак</item>
        <item >Лев</item>
        <item >Дева</item>
        <item >Весы</item>
        <item >Скорпион</item>
        <item >Стрелец</item>
        <item >Козерог</item>
        <item >Водолей</item>
        <item >Рыбы</item>
    </string-array>
    
	  <string-array name="mail_ru_horoscopes">
         <item >Вчера</item>
        <item >Сегодня</item>
        <item >Завтра</item>
         <item >Персональный</item>
         <item >Неделя</item>
          <item >Месяц</item>
           <item >Год</item>
    </string-array>
    
    
	    <string-array name="goroskop_ru_horoscopes">
        <item >Сегодня</item>
        <item >Персональный</item>
        <item >Любовный</item>
         <item >Неделя</item>
          <item >Денежный</item>
             <item >Год</item>
    </string-array>
    
	    <string-array name="horoscope_com_horoscopes">
         <item >Yesterday</item>
        <item >Today</item>
        <item >Tomorrow</item>
        <item >Personal</item>
         <item >Week</item>
        <item >Money</item>
         <item >Month</item>
    </string-array>
    
	     <string-array name="fr_yahoo_com_horoscopes">
         <item >Hier</item>
        <item >Aujourd\'hui</item>
        <item >Demain</item>
        <item >Semaine</item>
         <item >Mois</item>
    </string-array>
    
	     	     <string-array name="de_yahoo_com_horoscopes">
         <item >Gestern</item>
        <item >Heute</item>
        <item >Woche</item>
         <item >Monat</item>
          <item >Jahr</item>
    </string-array>
    
	     	       <string-array name="en_yahoo_com_horoscopes">
         <item >Yesterday</item>
        <item >Today</item>
        <item >Tomorrow</item>
         <item >Week</item>
         <item >Love</item>
         <item >Career</item>
          <item >Month</item>
          <item >Year</item>
    </string-array>
    
    <string-array name="providers">
          <item >horoscope.com</item>
          <item >shine.yahoo.com/horoscope</item>
          <item >fr.astrology.yahoo.com</item>
         <item >de.horoskop.yahoo.com</item>
        <item >horo.mail.ru</item>
         <item >goroskop.ru</item>
    </string-array>
    
    <string-array name="nameOfzodiacForLoadMailRu">
        <item>aries</item>
<item>taurus</item>
<item>gemini</item>
<item>cancer</item>
<item>leo</item>
<item>virgo</item>
<item>libra</item>
<item>scorpio</item>
<item>sagittarius</item>
<item>capricorn</item>
<item>aquarius</item>
<item>pisces</item>
    </string-array>
    
<string-array name="nameOfzodiacForLoadFrYahooCom">
    <item>b*lier</item>
<item>taureau</item>
<item>g*meaux</item>
<item>cancer</item>
<item>lion</item>
<item>vierge</item>
<item>balance</item>
<item>scorpion</item>
<item>sagittaire</item>
<item>capricorne</item>
<item>verseau</item>
<item>poissons</item>
     </string-array>
     
<string-array name="nameOfzodiacForLoadDeYahooCom">
    <item>widder</item>
<item>stier</item>
<item>zwillinge</item>
<item>krebs</item>
<item>l*we</item>
<item>jungfrau</item>
<item>waage</item>
<item>skorpion</item>
<item>sch+tze</item>
<item>steinbock</item>
<item>wassermann</item>
<item>fische</item>
     </string-array>
     
    
      <string-array name="nameOfHoroscopecForLoadGoroskopRu">
        <item></item>
<item>tomorrow/</item>
<item>goroskop_na_nedelyu</item>
<item>week</item>
<item>month</item>
<item>year</item>
    </string-array>
    
    <string-array name="nameOfHoroscopecForLoadMailRu">
        <item>yesterday</item>
<item>today</item>
<item>tomorrow</item>
<item>week</item>
<item>month</item>
<item>year</item>
    </string-array>
    
    
     <string-array name="nameOfHoroscopecForLoadHoroscopeCom">
        <item>yesterday</item>
<item>free-daily</item>
<item>tomorrow</item>
<item>daily-numerology</item>
<item>free-weekly</item>
<item>free-weekly-money</item>
<item>free-monthly</item>
    </string-array>
    
         <string-array name="nameOfHoroscopecForLoadFrYahooCom">
        <item>-jour-</item>
		<item>-semaine-</item>
		<item>-mois-</item>
    </string-array>
    
           <string-array name="nameOfHoroscopecForLoadDeYahooCom">
        <item>-tag-</item>
		<item>-woche-</item>
		<item>-monat-</item>
		<item>-jahr-</item>
    </string-array>
    
           <string-array name="nameOfHoroscopecForLoadEnYahooCom">
        <item>/extended-daily-</item>
		<item>/overview-weekly-</item>
		<item>/love-weekly-</item>
		<item>/career-weekly-</item>
		<item>/overview-monthly-</item>
		<item>/overview-yearly-</item>
    </string-array>
    
     <string name="user_agent">Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.17 (KHTML, like Gecko) Chrome/24.0.1312.60 Safari/537.17</string>
	<integer name="user_timeout">10000</integer>
     
     
     
     
     
     
     <string name="devoloper">by BigBrotherSRoverS</string>
       <string name="contacts">Contacts Info:\n#romzesrover@gmail.com \n#lanabaeva@gmail.com\n#vk.com/romzesrover\n#icq 579305266\n#skype RomzesRover</string>
     
     <!-- Text below allow to translate! -->
     
    <string name="error">An error occurred, check your network connection :)</string>
    <string name="retry">retry</string>
    
  <string-array name="zodiac_signs">
        <item >Ram</item>
        <item >Bull</item>
        <item >Twins</item>
        <item >Crab</item>
        <item >Lion</item>
        <item >Maiden</item>
        <item >Scales</item>
        <item >Scorpion</item>
        <item >Archer</item>
        <item >Goat-horned</item>
        <item >Water-Bearer</item>
        <item >Fish</item>
    </string-array>
    
    <string name="app_name">Horoscope 24/7</string>
     <string name="sub_menu">Sub Menu</string>
      <string name="update">Update</string>
      <string name="about">About</string>
        <string name="changeProvider">Change provider</string>
      <string name="widget_today">Horoscope 24/7: Today</string>
     <string name="widget_tommorow">Horoscope 24/7: Tomorrow</string>
    <string name="today">Today</string>
     <string name="tommorow">Tomorrow</string>
    <string name="version">To-date information</string>
    <string name="start">Start using!</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="step1">Step 1 of 3: Enter information about yourself</string>
    <string name="step2">Step 2 of 3: Select your zodiac sign</string>
    <string name="step3">Step 3 of 3: Select a provider</string>
    <string name="name">Enter your name:</string>
     <string name="nosett">You need to set your preferences first!</string>
    <string name="loading">Loading..</string>
    <string name="noname">Horoscopes Lover</string>
    <string name="date">Enter your date of birth:</string>
    <string name="help">Help</string>
    <string name="time">Enter your time of birth:</string>
    <string name="step1_button">Step 1</string>
    <string name="step2_button">Step 2</string>
    <string name="step3_button">Step 3</string>
     <string name="null_to_share">Oops! mistake, at first  need to load the horoscope</string>
    <string name="endSett_button">Start!</string>
    <string name="share">Share</string>
     <string name="send_from">Sent from </string>
      <string name="users_list">Users List </string>
      <string name="quick">quick watching :)</string>
     <string name="Automatic">Automatic selected</string>
     
       <string name="Lg">0</string>
       <string name="infoUrl">http://brothers-rovers.3dn.ru/loader5.1.eng.html</string>
          <string name="helpUrl">http://brothers-rovers.3dn.ru/help5.1.eng.html</string>
          <string name="horoscopes">HOROSCOPES</string>
           <string name="errorPr">This provider does not supply this horoscope</string>
           <integer name="DelayForThreads">300</integer>
</resources>