<menu xmlns:android="http://schemas.android.com/apk/res/android" >
	<item android:id="@+id/menu_share"
          android:title="@string/share"
          android:showAsAction="always"
          android:icon="@drawable/abs__ic_menu_share_holo_light"
          android:actionProviderClass="com.actionbarsherlock.widget.ShareActionProvider"/>
	<item android:id="@+id/submenu"
    android:showAsAction="always" android:icon="@drawable/abs__ic_menu_moreoverflow_normal_holo_light" android:title="@string/sub_menu">
    <menu>
      <item android:id="@+id/update" android:title="@string/update" />
      <item android:id="@+id/settings" android:title="@string/menu_settings" />
      <item android:id="@+id/changeProviderQ" android:title="@string/changeProvider"/>
      <item android:id="@+id/about" android:title="@string/about"/>
      <item android:id="@+id/trialPeriod" android:title="@string/trial_until"/>
    </menu>
     </item>
</menu>