<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="0px"
        android:layout_height="0px"
        android:focusable="true"
        android:focusableInTouchMode="true" />


    <RelativeLayout
            android:id="@+id/bot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/abs__ab_bottom_solid_light_holo"
            android:layout_alignParentBottom="true" >

<Button
    android:id="@+id/buttonStepOne"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/center"
    android:layout_alignParentLeft="true"
    android:layout_toLeftOf="@+id/buttonStepThree"
    android:background="@drawable/ic_agreement_disagree"
    android:text="@string/disagree" />

            <LinearLayout
                android:id="@+id/center"
                android:layout_width="1.5dp"
                android:layout_height="10dp"
                android:layout_alignBottom="@id/buttonStepThree"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="6dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/abs__list_divider_holo_light"
                android:orientation="vertical" >

            </LinearLayout>

            <Button
                android:id="@+id/buttonStepThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/center"
                android:layout_alignParentRight="true"
                android:background="@drawable/ic_agreement_agree"
                android:text="@string/agree" />

        </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bot"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="939dp"
            android:orientation="vertical" >
            
            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingTop="@dimen/preference_screen_header_padding_side"
                android:paddingLeft="@dimen/preference_screen_header_padding_side"
                android:paddingRight="@dimen/preference_screen_header_padding_side"
                android:text="@string/agreement_top"
                android:textColor="#111"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/preference_screen_header_padding_side"
                android:text="@string/agreement"
                android:textColor="#111"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>